--- a/preprints.bib
+++ b/preprints.bib
@@ -1,2 +1,4 @@
- @article{1Lee_2021, title={Distinct inflammatory and transcriptomic profiles in dominant versus subordinate males in mouse social hierarchies}, url={http://dx.doi.org/10.1101/2021.09.04.458987}, DOI={10.1101/2021.09.04.458987}, publisher={Cold Spring Harbor Laboratory}, author={Lee, Won and Milewski, Tyler M. and Dwortz, Madeleine F. and Young, Rebecca L. and Gaudet, Andrew D. and Fonken, Laura K. and Champagne, Frances A. and Curley, James P.}, year={2021}, month=sep }
+ @article{1Rubin_2021, title={Attentional Heterogeneity in Social Anxiety Disorder: Evidence from Hidden Markov Models}, url={http://dx.doi.org/10.31219/osf.io/8tf7g}, DOI={10.31219/osf.io/8tf7g}, publisher={Center for Open Science}, author={Rubin, Mikael and Muller, Karl and Hayhoe, Mary and Telch, Michael}, year={2021}, month=aug }
+
+ @article{2Rubin_2021, title={Attention Guidance Augmentation of Virtual Reality Exposure Therapy for Social Anxiety Disorder: A Pilot Randomized Controlled Trial}, url={http://dx.doi.org/10.31219/osf.io/af3cu}, DOI={10.31219/osf.io/af3cu}, publisher={Center for Open Science}, author={Rubin, Mikael and Muller, Karl and Hayhoe, Mary and Telch, Michael}, year={2021}, month=jul }
 
