--- a/pubs.bib
+++ b/pubs.bib
@@ -1,24 +1,96 @@
- @article{1Curley_2023, title={Shaping the development of complex social behavior}, volume={1530}, ISSN={1749-6632}, url={http://dx.doi.org/10.1111/nyas.15076}, DOI={10.1111/nyas.15076}, number={1}, journal={Annals of the New York Academy of Sciences}, publisher={Wiley}, author={Curley, James P. and Champagne, Frances A.}, year={2023}, month=oct, pages={46–63} }
+ @article{1Rubin_2024, title={Efficacy of a single session mindfulness based intervention: A randomized clinical trial}, volume={19}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/journal.pone.0299300}, DOI={10.1371/journal.pone.0299300}, number={3}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Rubin, Mikael and Fischer, Caitlin M. and Telch, Michael J.}, editor={Rababa, Mohammad Jamil}, year={2024}, month=mar, pages={e0299300} }
 
- @article{2Turetsky_2022, title={Explaining the gender gap in negotiation performance: Social network ties outweigh internal barriers}, volume={79}, ISSN={1540-4560}, url={http://dx.doi.org/10.1111/josi.12536}, DOI={10.1111/josi.12536}, number={1}, journal={Journal of Social Issues}, publisher={Wiley}, author={Turetsky, Kate M. and Curley, James P. and Carter, Ashli B. and Purdie‐Greenaway, Valerie}, year={2022}, month=jul, pages={50–78} }
+ @article{2Rubin_2024, title={Low reliability when determining criterion a for posttraumatic stress disorder from self-report descriptions of traumatic events: The need for transparent methods.}, volume={16}, ISSN={1942-9681}, url={http://dx.doi.org/10.1037/tra0001477}, DOI={10.1037/tra0001477}, number={3}, journal={Psychological Trauma: Theory, Research, Practice, and Policy}, publisher={American Psychological Association (APA)}, author={Rubin, Mikael and Foulser, Anna Alban and Siegel, Emma and Smits, Jasper A. J. and Powers, Mark B. and Angkaw, Abigail and Telch, Michael J.}, year={2024}, month=mar, pages={435–442} }
 
- @article{3Ward_2022, title={Network Hawkes Process Models for Exploring Latent Hierarchy in Social Animal Interactions}, volume={71}, ISSN={1467-9876}, url={http://dx.doi.org/10.1111/rssc.12581}, DOI={10.1111/rssc.12581}, number={5}, journal={Journal of the Royal Statistical Society Series C: Applied Statistics}, publisher={Oxford University Press (OUP)}, author={Ward, Owen G. and Wu, Jing and Zheng, Tian and Smith, Anna L. and Curley, James P.}, year={2022}, month=jul, pages={1402–1426} }
+ @article{3Rubin_2023, title={Multimodal Remote Research on Social Anxiety Using a New Teleconferencing Paradigm}, volume={47}, ISSN={1573-2819}, url={http://dx.doi.org/10.1007/s10608-023-10371-y}, DOI={10.1007/s10608-023-10371-y}, number={3}, journal={Cognitive Therapy and Research}, publisher={Springer Science and Business Media LLC}, author={Rubin, Mikael and Gebhardt, Eli S. and Malloy, Luna and Telch, Michael J.}, year={2023}, month=apr, pages={423–430} }
 
- @article{4Wu_2022, title={Markov-modulated Hawkes processes for modeling sporadic and bursty event occurrences in social interactions}, volume={16}, ISSN={1932-6157}, url={http://dx.doi.org/10.1214/21-aoas1539}, DOI={10.1214/21-aoas1539}, number={2}, journal={The Annals of Applied Statistics}, publisher={Institute of Mathematical Statistics}, author={Wu, Jing and Ward, Owen G. and Curley, James and Zheng, Tian}, year={2022}, month=jun }
+ @article{4Smits_2022, title={CO2 reactivity as a biomarker of exposure-based therapy non-response: study protocol}, volume={22}, ISSN={1471-244X}, url={http://dx.doi.org/10.1186/s12888-022-04478-x}, DOI={10.1186/s12888-022-04478-x}, number={1}, journal={BMC Psychiatry}, publisher={Springer Science and Business Media LLC}, author={Smits, Jasper A. J. and Monfils, Marie-H. and Otto, Michael W. and Telch, Michael J. and Shumake, Jason and Feinstein, Justin S. and Khalsa, Sahib S. and Cobb, Adam R. and Parsons, E. Marie and Long, Laura J. and McSpadden, Bryan and Johnson, David and Greenberg, Alma}, year={2022}, month=dec }
 
- @article{5Lee_2022, title={Social status mediated variation in hypothalamic transcriptional profiles of male mice}, volume={142}, ISSN={0018-506X}, url={http://dx.doi.org/10.1016/j.yhbeh.2022.105176}, DOI={10.1016/j.yhbeh.2022.105176}, journal={Hormones and Behavior}, publisher={Elsevier BV}, author={Lee, W. and Dwortz, M.F. and Milewski, T.M. and Champagne, F.A. and Curley, J.P.}, year={2022}, month=jun, pages={105176} }
+ @article{5Cuyler_2022, title={Real-world outcomes of an innovative digital therapeutic for treatment of panic disorder and PTSD: A 1,500 patient effectiveness study}, volume={4}, ISSN={2673-253X}, url={http://dx.doi.org/10.3389/fdgth.2022.976001}, DOI={10.3389/fdgth.2022.976001}, journal={Frontiers in Digital Health}, publisher={Frontiers Media SA}, author={Cuyler, Robert N. and Katdare, Rahul and Thomas, Simon and Telch, Michael J.}, year={2022}, month=nov }
 
- @article{6Padilla_Coreano_2022, title={Cortical ensembles orchestrate social competition through hypothalamic outputs}, volume={603}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/s41586-022-04507-5}, DOI={10.1038/s41586-022-04507-5}, number={7902}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Padilla-Coreano, Nancy and Batra, Kanha and Patarino, Makenzie and Chen, Zexin and Rock, Rachel R. and Zhang, Ruihan and Hausmann, Sébastien B. and Weddington, Javier C. and Patel, Reesha and Zhang, Yu E. and Fang, Hao-Shu and Mishra, Srishti and LeDuke, Deryn O. and Revanna, Jasmin and Li, Hao and Borio, Matilde and Pamintuan, Rachelle and Bal, Aneesh and Keyes, Laurel R. and Libster, Avraham and Wichmann, Romy and Mills, Fergil and Taschbach, Felix H. and Matthews, Gillian A. and Curley, James P. and Fiete, Ila R. and Lu, Cewu and Tye, Kay M.}, year={2022}, month=mar, pages={667–671} }
+ @article{6Telch_2022, title={Use of Cannabidiol (CBD) oil in the treatment of PTSD: Study design and rationale for a placebo-controlled randomized clinical trial}, volume={122}, ISSN={1551-7144}, url={http://dx.doi.org/10.1016/j.cct.2022.106933}, DOI={10.1016/j.cct.2022.106933}, journal={Contemporary Clinical Trials}, publisher={Elsevier BV}, author={Telch, Michael J. and Fischer, Caitlin M. and Zaizar, Eric D. and Rubin, Mikael and Papini, Santiago}, year={2022}, month=nov, pages={106933} }
 
- @article{7Milewski_2022, title={Behavioural and physiological plasticity in social hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0443}, DOI={10.1098/rstb.2020.0443}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Milewski, T. M. and Lee, W. and Champagne, F. A. and Curley, J. P.}, year={2022}, month=jan }
+ @article{7Zoellner_2023, title={Brief Imaginal Exposure for PTSD: Trajectories of Change in Distress}, volume={30}, ISSN={1077-7229}, url={http://dx.doi.org/10.1016/j.cbpra.2022.04.005}, DOI={10.1016/j.cbpra.2022.04.005}, number={3}, journal={Cognitive and Behavioral Practice}, publisher={Elsevier BV}, author={Zoellner, Lori A. and Lehinger, Elizabeth A. and Rosencrans, Peter L. and Cornell-Maier, Sarah M. and Foa, Edna B. and Telch, Michael J. and Gonzalez-Lima, Francisco and Bedard-Gilligan, Michele A.}, year={2023}, month=aug, pages={341–353} }
 
- @article{8Strauss_2022, title={DomArchive: a century of published dominance data}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0436}, DOI={10.1098/rstb.2020.0436}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Strauss, Eli D. and DeCasien, Alex R. and Galindo, Gabriela and Hobson, Elizabeth A. and Shizuka, Daizaburo and Curley, James P.}, year={2022}, month=jan }
+ @article{8Rubin_2022, title={Attention guidance augmentation of virtual reality exposure therapy for social anxiety disorder: a pilot randomized controlled trial}, volume={51}, ISSN={1651-2316}, url={http://dx.doi.org/10.1080/16506073.2022.2053882}, DOI={10.1080/16506073.2022.2053882}, number={5}, journal={Cognitive Behaviour Therapy}, publisher={Informa UK Limited}, author={Rubin, Mikael and Muller, Karl and Hayhoe, Mary M. and Telch, Michael J.}, year={2022}, month=apr, pages={371–387} }
 
- @article{9Dwortz_2022, title={Neural systems that facilitate the representation of social rank}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0444}, DOI={10.1098/rstb.2020.0444}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Dwortz, Madeleine F. and Curley, James P. and Tye, Kay M. and Padilla-Coreano, Nancy}, year={2022}, month=jan }
+ @article{9Rubin_2022, title={Selective visual attention during public speaking in an immersive context}, volume={84}, ISSN={1943-393X}, url={http://dx.doi.org/10.3758/s13414-021-02430-x}, DOI={10.3758/s13414-021-02430-x}, number={2}, journal={Attention, Perception, &amp; Psychophysics}, publisher={Springer Science and Business Media LLC}, author={Rubin, Mikael and Guo, Sihang and Muller, Karl and Zhang, Ruohan and Telch, Michael J. and Hayhoe, Mary M.}, year={2022}, month=jan, pages={396–407} }
 
- @article{10Strauss_2022, title={The centennial of the pecking order: current state and future prospects for the study of dominance hierarchies}, volume={377}, ISSN={1471-2970}, url={http://dx.doi.org/10.1098/rstb.2020.0432}, DOI={10.1098/rstb.2020.0432}, number={1845}, journal={Philosophical Transactions of the Royal Society B: Biological Sciences}, publisher={The Royal Society}, author={Strauss, Eli D. and Curley, James P. and Shizuka, Daizaburo and Hobson, Elizabeth A.}, year={2022}, month=jan }
+ @article{10Zaizar_2022, title={Impact of cannabidiol-rich hemp extract oil on reconsolidation disruption of naturalistic interoceptive aversive memory in humans: Protocol for a randomized clinical trial}, volume={119}, ISSN={1551-7144}, url={http://dx.doi.org/10.1016/j.cct.2022.106847}, DOI={10.1016/j.cct.2022.106847}, journal={Contemporary Clinical Trials}, publisher={Elsevier BV}, author={Zaizar, Eric D. and Papini, Santiago and O’Connor, Patrick and Telch, Michael J.}, year={2022}, month=aug, pages={106847} }
 
- @article{11Chase_2022, title={Networks never rest: An investigation of network evolution in three species of animals}, volume={68}, ISSN={0378-8733}, url={http://dx.doi.org/10.1016/j.socnet.2021.09.002}, DOI={10.1016/j.socnet.2021.09.002}, journal={Social Networks}, publisher={Elsevier BV}, author={Chase, Ivan D. and Coelho, Darius and Lee, Won and Mueller, Klaus and Curley, James P.}, year={2022}, month=jan, pages={356–373} }
+ @article{11Rubin_2021, title={The influence of PTSD symptoms on selective visual attention while reading}, volume={36}, ISSN={1464-0600}, url={http://dx.doi.org/10.1080/02699931.2021.2016639}, DOI={10.1080/02699931.2021.2016639}, number={3}, journal={Cognition and Emotion}, publisher={Informa UK Limited}, author={Rubin, Mikael and Bhattacharya, Nilavra and Gwizdka, Jacek and Griffin, Zenzi and Telch, Michael}, year={2021}, month=dec, pages={527–534} }
 
- @article{12Lee_2021, title={Effect of relative social rank within a social hierarchy on neural activation in response to familiar or unfamiliar social signals}, volume={11}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-82255-8}, DOI={10.1038/s41598-021-82255-8}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Lee, Won and Dowd, Hollie N. and Nikain, Cyrus and Dwortz, Madeleine F. and Yang, Eilene D. and Curley, James P.}, year={2021}, month=feb }
+ @article{12Cobb_2021, title={Hippocampal volume and volume asymmetry prospectively predict PTSD symptom emergence among Iraq-deployed soldiers}, volume={53}, ISSN={1469-8978}, url={http://dx.doi.org/10.1017/s0033291721003548}, DOI={10.1017/s0033291721003548}, number={5}, journal={Psychological Medicine}, publisher={Cambridge University Press (CUP)}, author={Cobb, Adam R. and Rubin, Mikael and Stote, Deborah L. and Baldwin, Brian C. and Lee, Han-Joo and Hariri, Ahmad R. and Telch, Michael J.}, year={2021}, month=nov, pages={1906–1913} }
 
+ @article{13Rubin_2021, title={Distinct trajectories of depression symptoms in early and middle adolescence: Preliminary evidence from longitudinal network analysis}, volume={142}, ISSN={0022-3956}, url={http://dx.doi.org/10.1016/j.jpsychires.2021.07.053}, DOI={10.1016/j.jpsychires.2021.07.053}, journal={Journal of Psychiatric Research}, publisher={Elsevier BV}, author={Rubin, Mikael and Bicki, Alexandra and Papini, Santiago and Smits, Jasper A.J. and Telch, Michael J. and Gray, Jane S.}, year={2021}, month=oct, pages={198–203} }
+
+ @article{14Rubin_2021, title={Exploratory and Confirmatory Bayesian Networks Identify the Central Role of Non-judging in Symptoms of Depression}, volume={12}, ISSN={1868-8535}, url={http://dx.doi.org/10.1007/s12671-021-01726-1}, DOI={10.1007/s12671-021-01726-1}, number={10}, journal={Mindfulness}, publisher={Springer Science and Business Media LLC}, author={Rubin, Mikael and Papini, Santiago and Dainer-Best, Justin and Zaizar, Eric D. and Smits, Jasper A. J. and Telch, Michael J.}, year={2021}, month=aug, pages={2544–2551} }
+
+ @article{15Rubin_2021, title={In Game as in Life? Linking Decision-making to Real-world Behavior}, volume={7}, ISSN={2474-7394}, url={http://dx.doi.org/10.1525/collabra.28115}, DOI={10.1525/collabra.28115}, number={1}, journal={Collabra: Psychology}, publisher={University of California Press}, author={Rubin, Mikael and Telch, Michael and Dainer-Best, Justin}, year={2021} }
+
+ @article{16Guo_2021, title={Attentional Capture during Public Speaking in Virtual Reality Environment}, volume={21}, ISSN={1534-7362}, url={http://dx.doi.org/10.1167/jov.21.9.2860}, DOI={10.1167/jov.21.9.2860}, number={9}, journal={Journal of Vision}, publisher={Association for Research in Vision and Ophthalmology (ARVO)}, author={Guo, Sihang and Rubin, Mikael and Zhang, Ruohan and Muller, Karl and Telch, Michael and Hayhoe, Mary}, year={2021}, month=sep, pages={2860} }
+
+ @article{17Zaizar_2021, title={Singular and combined effects of transcranial infrared laser stimulation and exposure therapy on pathological fear: a randomized clinical trial}, volume={53}, ISSN={1469-8978}, url={http://dx.doi.org/10.1017/s0033291721002270}, DOI={10.1017/s0033291721002270}, number={3}, journal={Psychological Medicine}, publisher={Cambridge University Press (CUP)}, author={Zaizar, Eric D. and Papini, Santiago and Gonzalez-Lima, F. and Telch, Michael J.}, year={2021}, month=jul, pages={908–917} }
+
+ @article{18Cobb_2021, title={tDCS-Augmented in vivo exposure therapy for specific fears: A randomized clinical trial}, volume={78}, ISSN={0887-6185}, url={http://dx.doi.org/10.1016/j.janxdis.2020.102344}, DOI={10.1016/j.janxdis.2020.102344}, journal={Journal of Anxiety Disorders}, publisher={Elsevier BV}, author={Cobb, Adam R. and O’Connor, Patrick and Zaizar, Eric and Caulfield, Kevin and Gonzalez-Lima, Francisco and Telch, Michael J.}, year={2021}, month=mar, pages={102344} }
+
+ @article{19Rubin_2020, title={Pupillary Response to Affective Voices: Physiological Responsivity and Posttraumatic Stress Disorder}, volume={34}, ISSN={1573-6598}, url={http://dx.doi.org/10.1002/jts.22574}, DOI={10.1002/jts.22574}, number={1}, journal={Journal of Traumatic Stress}, publisher={Wiley}, author={Rubin, Mikael and Telch, Michael J.}, year={2020}, month=sep, pages={182–189} }
+
+ @article{20Feldman_2021, title={Factors predicting the development of psychopathology among first responders: A prospective, longitudinal study.}, volume={13}, ISSN={1942-9681}, url={http://dx.doi.org/10.1037/tra0000957}, DOI={10.1037/tra0000957}, number={1}, journal={Psychological Trauma: Theory, Research, Practice, and Policy}, publisher={American Psychological Association (APA)}, author={Feldman, Talya R. and Carlson, Caryn L. and Rice, Leslie K. and Kruse, Marc I. and Beevers, Christopher G. and Telch, Michael J. and Josephs, Robert A.}, year={2021}, month=jan, pages={75–83} }
+
+ @article{21Powers_2021, title={Nonpharmacologic Pain Management Among Hospitalized Inpatients: A Randomized Waitlist-Controlled Trial of Standard Virtual Reality (CGI VR) Versus Video Capture VR (360 degrees 3D/Stereoscopic Video Capture VR)}, volume={37}, ISSN={0749-8047}, url={http://dx.doi.org/10.1097/ajp.0000000000000958}, DOI={10.1097/ajp.0000000000000958}, number={9}, journal={The Clinical Journal of Pain}, publisher={Ovid Technologies (Wolters Kluwer Health)}, author={Powers, Mark B. and Carl, Emily and Levihn-Coon, Andrew and Van Veldhuizen, Melissa and Caven, Andrew and Pogue, Jamie and Fresnedo, Michelle and Turner, Emma D. and Adams, Maris and Leonard, Kiara and Conroy, Haley and Lantrip, Crystal and Caven, Thomas and Isbell, Claire and Regner, Justin and Garmon, Emily and Foreman, Michael and Miller, Wayne and Fares, Lorie A. and Carlbring, Per and Otto, Michael W. and Weiss, Daniel N. and Hughes, James and Bernhardt, Jay M. and Roy, Rob and Oh, Jeeyun and Copt, Ryan and MacClements, Jonathan and Warren, Ann M. and Rosenfield, Benjamin and Rosenfield, David and Minns, Sean and Telch, Michael J. and Smits, Jasper A.J.}, year={2021}, month=jul, pages={678–687} }
+
+@Article{1,
+  title = {Carbon dioxide reactivity predicts fear expression after extinction},
+  author = {Michael Telch},
+  journal = {Biological Psychiatry: GOS},
+  year = {2024},
+}
+@Article{2,
+  title = {Psychometric Evaluation of a Measure of Posttraumatic Safety Behaviors},
+  author = {Michael Telch},
+  journal = {Cognitive Behavioral Practice},
+  year = {2024},
+}
+@Article{3,
+  title = {A Bayesian Longitudinal Network Analysis of Panic Disorder Symptoms and Respiratory Biomarkers},
+  author = {Michael Telch},
+  journal = {Clinical Psychological Science},
+  year = {2024},
+}
+@Article{4,
+  title = {Perceived childhood family cohesiveness prior to deployment prospectively moderates risk for warzone psychopathology in theater among deployed U.S. soldiers},
+  author = {Michael Telch},
+  journal = {Journal of Traumatic Stress},
+  year = {2024},
+}
+@Article{5,
+  title = {Attentional heterogeneity in social anxiety disorder: Evidence from Hidden Markov Models},
+  author = {Michael Telch},
+  journal = {Behaviour Research and Therapy},
+  year = {2023},
+}
+@Article{6,
+  title = {Social Anxiety; Internet-based research; social stressor challenge; eye tracking; audio vocal indicator},
+  author = {Michael Telch},
+  journal = {Behavior Therapy},
+  year = {2023},
+}
+@Article{7,
+  title = {Impact of Cannabidiol-Rich Hemp Extract Oil on Reconsolidation Disruption of Naturalistic Interoceptive Aversive Memory in Humans: Protocol for a Randomized Clinical Trial},
+  author = {Michael Telch},
+  journal = {Contemporary Clinical Trials},
+  year = {2022},
+}
+@Article{8,
+  title = {Brief imaginal exposure for PTSD:  Trajectories of change in distress},
+  author = {Michael Telch},
+  journal = {Cognitive and Behavioral Practice},
+  year = {2022},
+}
+@Article{9,
+  title = {Targeting Anxiety Sensitivity with Evidence Based Psychoeducation: A Randomized Waitlist-Controlled Trial of a Brief Standalone Digital Intervention},
+  author = {Michael Telch},
+  journal = {.},
+  year = {2022},
+}
